# TERM_PAPER_PROJECT_4

./: README.md  pyproject.toml
src/: main.py
utils/: api_classes.py  class_vacancies.py  functions.py
